minor corrections on the shipping appartment field, options on postProduct method and header litle modification of stylesheet for ahippingapartment input

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -980,7 +980,7 @@ width:60%;
 overflow:hidden
 }
 
-.form-block #apartment {
+.form-block #apartment, .form-block #shipping_apartment {
 margin-left:200px
 }
 
